[package]
name = "communication"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.3"
bytes = "1.11.0"
clap = { version = "4.5.54", features = ["derive"] }
prost = "0.14.3"
rand = "0.9.2"
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "io-std", "io-util", "net", "sync"] }
tonic = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
